--- a/public/PCEconomic/src/main/resources/templates/categories.html
+++ b/public/PCEconomic/src/main/resources/templates/categories.html
@@ -13,7 +13,7 @@
           <div class="col-12">
             <div th:if="${article.id}" class="col-12">
               <img
-                th:attr="srcset=@{/img/productes/{id}/{id}.jpg(id=${article.id})}"
+                th:attr="srcset=@{/img/productes/{id}/0.jpg(id=${article.id})}"
                 class="img-fluid col-12"
               />
             </div>
