--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -24,7 +24,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="d-flex flex-column col-6">
+                <div class="d-flex flex-column col-md-6 col-sm-12">
                     <h1 th:text="${article.nom}"></h1>
                     <p
                             th:text="'Marca: ' + ${article.marca.name} + ' - P/N: ' + ${article.marca.cif} "
@@ -36,7 +36,7 @@
                             min="1"
                             th:max="${article.stockTotal}"
                     />
-                    <div class="d-flex flex-row">
+                    <div class="d-flex justify-content-evenly">
                         <button class="btn btn-pc-economic-light">Me Gusta</button>
                         <button class="btn btn-pc-economic-light">Añadir al Carrito</button>
                         <button class="btn btn-pc-economic-dark">Comprar</button>
