--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <body>
         <header th:replace="layout/layout.html :: header"></header>
         <main class="container">
-            <section id="slider-principal " class="col-12 mt-5">
+            <section class="col-12 mt-5">
                 <img th:src="@{/img/static/slider.webp}" class="img-fluid col-12 h-50 slider-principal"
                      alt="slider-principal">
             </section>
