--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -12,12 +12,12 @@
                 <a th:href="@{/article/{id}(id=${article.id})}" class="col-xs-12 col-sm-6 col-lg-4 text-center text-decoration-none"
                    th:each="article : ${articles}">
                     <div class="col-12">
-                        <div th:if="${article.id}" class="col-12">
+                        <div th:if="${article.article.id}" class="col-12">
                             <img th:attr="srcset=@{/img/productes/{id}/0.jpg(id=${article.id})}"
                                  class=" img-fluid  col-12">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title" th:text="${article.nom}">Card title</h5>
+                            <h5 class="card-title" th:text="${article.article.nom}">Card title</h5>
                         </div>
                     </div>
                 </a>
