--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -52,11 +52,20 @@
             th:text="'Marca: ' + ${article.marca.name} + ' - P/N: ' + ${article.marca.cif} "
           ></p>
 
+          <span th:each="prop : ${article.propietats}">
+            <span th:each="prop2 : ${prop.propietats}">
+              <select>
+                <option th:each="prop3 : ${prop2.valors}">
+                  <p th:text="${prop3.clau}"></p>
+                </option>
+              </select>
+            </span>
+          </span>
 
-            <label for="propietat"> Propietats: </label>
-            <select th:each="prop : ${article.propietats}" id="propietat">
-                <option th:text="${prop.propietats.valor.propietat.name} + ': ' +  ${prop.propietats.valor.clau} + ' - Preu: ' + ${prop.preu} +   '- Stock:'  + ${prop.stock} " th:value="${prop.propietats.valor.propietat.id}"></option>
-            </select>
+          <!--<label for="propietat"> Propietats: </label>
+                                                                                          <select th:each="prop : ${article.propietats}" id="propietat">
+                                                                                              <option th:text="${prop.propietats.valor.propietat.name} + ': ' +  ${prop.propietats.valor.clau} + ' - Preu: ' + ${prop.preu} +   '- Stock:'  + ${prop.stock} " th:value="${prop.propietats.valor.propietat.id}"></option>
+                                                                                          </select>-->
           <label for="cant"> Cantidad: </label>
           <input
             id="cant"
@@ -71,7 +80,6 @@
           </div>
         </div>
       </div>
-
 
       <div>
         <h2>Descripción</h2>
