--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -6,146 +6,146 @@
     <title th:text="${propietats.article.nom} +' | PCEconomic'"></title>
 </head>
 <body class="bgbd" th:attr="data-id-article=${propietats.article.id}">
-    <header th:replace="layout/layout.html :: header"></header>
-    <main class="container bg-cont mt-md-5 mt-5" th:attr="data-id=${propietats.id}">
-        <div class="col-12 row m-2 justify-content-center">
-            <div class="col-md-6 col-sm-12">
-                <div id="carouselExampleIndicators" class="carousel slide">
-                    <div class="carousel-inner">
-                        <div class="carousel-item" th:each="foto : ${propietats.imatges}"
-                              >
-                            <img class="d-block img-fluid imgSizeArticle"
-                                 th:src="@{/img/productes/{article}/{prop}/{foto}(article=${propietats.article.id},prop=${propietats.id},foto=${foto.path})}"
-                                 id="propietats.id" th:alt="${foto.id}">
-                        </div>
+<header th:replace="layout/layout.html :: header"></header>
+<main class="container bg-cont mt-md-5 mt-5" th:attr="data-id=${propietats.id}">
+    <div class="col-12 row m-2 justify-content-center">
+        <div class="col-md-6 col-sm-12">
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item" th:each="foto : ${propietats.imatges}"
+                    >
+                        <img class="d-block img-fluid imgSizeArticle"
+                             th:src="@{/img/productes/{article}/{prop}/{foto}(article=${propietats.article.id},prop=${propietats.id},foto=${foto.path})}"
+                             id="propietats.id" th:alt="${foto.id}">
                     </div>
-                    <button class="carousel-control-prev" data-bs-slide="prev"
-                            data-bs-target="#carouselExampleIndicators"
-                            type="button">
-                        <span class="carousel-color" aria-hidden="true"><i class="bi bi-arrow-left"></i></span>
-                    </button>
-                    <button class="carousel-control-next" data-bs-slide="next"
-                            data-bs-target="#carouselExampleIndicators"
-                            type="button">
-                        <span class="carousel-color" aria-hidden="true"><i class="bi bi-arrow-right"></i></span>
-                    </button>
                 </div>
+                <button class="carousel-control-prev" data-bs-slide="prev"
+                        data-bs-target="#carouselExampleIndicators"
+                        type="button">
+                    <span class="carousel-color" aria-hidden="true"><i class="bi bi-arrow-left"></i></span>
+                </button>
+                <button class="carousel-control-next" data-bs-slide="next"
+                        data-bs-target="#carouselExampleIndicators"
+                        type="button">
+                    <span class="carousel-color" aria-hidden="true"><i class="bi bi-arrow-right"></i></span>
+                </button>
             </div>
+        </div>
 
-            <div class="col-md-6 col-sm-12">
-                <h1 th:text="${propietats.article.nom}" class="mt-md-3 mt-5"></h1>
-                <h5 class="text-body mt-2"
-                    th:text="'Marca: ' + ${propietats.article.marca.name} + ' - P/N: ' + ${propietats.article.marca.cif} "></h5>
+        <div class="col-md-6 col-sm-12">
+            <h1 th:text="${propietats.article.nom}" class="mt-md-3 mt-5"></h1>
+            <h5 class="text-body mt-2"
+                th:text="'Marca: ' + ${propietats.article.marca.name} + ' - P/N: ' + ${propietats.article.marca.cif} "></h5>
 
-                <div class="row justify-content-center align-items-center">
-                    <div th:if="!${preuOferta}" class="col-6 d-flex">
-                        <span class="text-center mt-3 col h1" th:text="${preuEuros}"></span>
-                    </div>
-                    <div th:if="${preuOferta}" class="col-6 d-flex">
+            <div class="row justify-content-center align-items-center">
+                <div th:if="!${preuOferta}" class="col-6 d-flex">
+                    <span class="text-center mt-3 col h1" th:text="${preuEuros}"></span>
+                </div>
+                <div th:if="${preuOferta}" class="col-6 d-flex">
                             <span class="text-center mt-3 col h1 text-decoration-line-through"
                                   th:text="${preuEuros}"></span>
-                        <span class="text-center mt-3 col h1 text-danger" th:if="${preuOferta}"
-                              th:text="${preuOferta}"></span>
-                    </div>
-                    <div class="col-12 mt-3 ">
-                        <label for="cantidad" class="form-label">Cantidad : </label>
-                        <input id="cantidad" class="form-control border border-secondary" type="number" min="1"
-                               value="1"
-                               th:max="${propietats.stock}">
-                    </div>
+                    <span class="text-center mt-3 col h1 text-danger" th:if="${preuOferta}"
+                          th:text="${preuOferta}"></span>
                 </div>
-                <div class="d-flex justify-content-evenly mt-5">
-
-                    <div id="addcarrito" class="col-5 row"></div>
-                    <div id="comprar" class="col-5 row"></div>
-                </div>
-
-                <div id="articles-disponibles" class="row mt-4 justify-content-center">
-                    <span class="col-12 text-center mt-1 mb-2">Elige tu mismo articulo pero con distintas propiedades!</span>
-                    <div class="spinner-border text-secondary" role="status" id="loading-wheel">
-                        <span class="visually-hidden">Loading...</span>
-                    </div>
+                <div class="col-12 mt-3 ">
+                    <label for="cantidad" class="form-label">Cantidad : </label>
+                    <input id="cantidad" class="form-control border border-secondary" type="number" min="1"
+                           value="1"
+                           th:max="${propietats.stock}">
                 </div>
             </div>
+            <div class="d-flex justify-content-evenly mt-5">
 
-            <div class="col-12 mt-5 row justify-content-center">
-                <div class="col-12">
-                    <h3>Propietades del producto</h3>
-                    <span th:each="val : ${propietats.valor}">
+                <div id="addcarrito" class="col-5 row"></div>
+                <div id="comprar" class="col-5 row"></div>
+            </div>
+
+            <div id="articles-disponibles" class="row mt-4 justify-content-center">
+                <span class="col-12 text-center mt-1 mb-2">Elige tu mismo articulo pero con distintas propiedades!</span>
+                <div class="spinner-border text-secondary" role="status" id="loading-wheel">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 mt-5 row justify-content-center">
+            <div class="col-12">
+                <h3>Propietades del producto</h3>
+                <span th:each="val : ${propietats.valor}">
                         <span th:each="prop : ${val.propietat}">
                             <p th:text="' - ' + ${prop.nom} + ': ' + ${val.valor}"></p>
                         </span>
                     </span>
-                    <h3>Descripción</h3>
-                    <p th:text="${propietats.article.descripcio}"></p>
-                </div>
+                <h3>Descripción</h3>
+                <p th:text="${propietats.article.descripcio}"></p>
             </div>
         </div>
-    </main>
-    <div th:replace="layout/layout.html :: jquery"></div>
+    </div>
+</main>
+<div th:replace="layout/layout.html :: jquery"></div>
 
-    <script>
-        $(document).ready(function () {
-            $(".carousel-item:first").addClass("active");
+<script>
+    $(document).ready(function () {
+        $(".carousel-item:first").addClass("active");
+        $("#comprar").append(
+            "<a  class=\"btn btn-pc-economic-light col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=false'> Comprar </a>"
+        )
+        $("#addcarrito").append(
+            "<a  class=\"btn btn-pc-economic-dark col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=true'> Añadir al carrito </a>"
+        )
+        $('#cantidad').bind('input', function () {
+            $("#comprar").empty();
+            $("#addcarrito").empty();
             $("#comprar").append(
                 "<a  class=\"btn btn-pc-economic-light col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=false'> Comprar </a>"
             )
             $("#addcarrito").append(
                 "<a  class=\"btn btn-pc-economic-dark col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=true'> Añadir al carrito </a>"
             )
-            $('#cantidad').bind('input', function () {
-                $("#comprar").empty();
-                $("#addcarrito").empty();
-                $("#comprar").append(
-                    "<a  class=\"btn btn-pc-economic-light col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=false'> Comprar </a>"
-                )
-                $("#addcarrito").append(
-                    "<a  class=\"btn btn-pc-economic-dark col-12\" href='/addcarrito?idprops=" + $("main").attr("data-id") + "&quantitat=" + $("#cantidad").val() + "&isMain=true'> Añadir al carrito </a>"
-                )
-            });
         });
+    });
 
 
-            $.ajax({
-                url: "/api/propietats",
-                type: "GET",
-                dataType: "json",
-                beforeSend: function () {
-                    $("#loading-wheel").show();
-                },
-                complete: function () {
-                    $("#loading-wheel").hide();
-                },
-                success: function (propietats) {
-                    var idPropietat = $("main").attr("data-id");
-                    var idArticle = $("body").attr("data-id-article");
-                    console.log(" Id article: " + idArticle + " Id propietat: " + idPropietat);
-                    for (var p of propietats) {
-                        for (img of p.imatges) {
-                            if (p.article.id === idArticle && p.id !== idPropietat && img.principal === true) {
-                                $('#articles-disponibles').append(
-                                    '<a href="/article/' + p.article.id + '/' + p.id + '" class="col-sm-3 col-6 text-end text-decoration-none card align-items-center">' +
-                                    '<span class="text-end h4 text-pc-economic-default bold ">' + p.preu + ' € </span>' +
-                                    '<img src="/img/productes/' + p.article.id + '/' + p.id + '/' + img.path + '" class="width-minicards object-fit-cover mb-1" alt="img">' +
-                                    '<div id="' + p.id + '" class="row justify-content-around col-12"></div>' +
-                                    '</div>' +
-                                    '</a>'
-                                )
+    $.ajax({
+        url: "/api/propietats",
+        type: "GET",
+        dataType: "json",
+        beforeSend: function () {
+            $("#loading-wheel").show();
+        },
+        complete: function () {
+            $("#loading-wheel").hide();
+        },
+        success: function (propietats) {
+            var idPropietat = $("main").attr("data-id");
+            var idArticle = $("body").attr("data-id-article");
+            console.log("Id propietat: " + idPropietat);
+            console.log("Id article: " + idArticle);
+            for (var p of propietats) {
+                for (img of p.imatges) {
+                    if (img.principal == true && p.article.id == idArticle && p.id != idPropietat){
+                        $('#articles-disponibles').append(
+                            '<a href="/article/' + p.article.id + '/' + p.id + '" class="col-sm-3 col-6 text-end text-decoration-none card align-items-center">' +
+                            '<span class="text-end h4 text-pc-economic-default bold ">' + p.preu + ' € </span>' +
+                            '<img src="/img/productes/' + p.article.id + '/' + p.id + '/' + img.path + '" class="width-minicards object-fit-cover mb-1" alt="img">' +
+                            '<div id="' + p.id + '" class="row justify-content-around col-12"></div>' +
+                            '</div>' +
+                            '</a>'
+                        )
+                    }
+                    for (var v of p.valor) {
+                        for (var prop of v.propietat)
+                            $('#' + p.id).append(
+                                '<span class="col-12 text-center text-pc-economic-default">' + prop.nom + ': ' + v.valor + '</span>'
+                            )
 
-                                for (var v of p.valor) {
-                                    for (var prop of v.propietat)
-                                        $('#' + p.id).append(
-                                            '<span class="col-12 text-center text-pc-economic-default">' + prop.nom + ': ' + v.valor + '</span>'
-                                        )
-
-                                }
-                            }
-                        }
                     }
                 }
-            });
-    </script>
+            }
+        }
+    });
+</script>
 
-    <footer th:replace="layout/layout :: footer"></footer>
+<footer th:replace="layout/layout :: footer"></footer>
 </body>
 </html>
