--- a/public/PCEconomic/src/main/resources/templates/pagorealizado.html
+++ b/public/PCEconomic/src/main/resources/templates/pagorealizado.html
@@ -5,7 +5,20 @@
 <body class="bgbd">
 <header th:replace="layout/layout :: header2"></header>
 <main class="container bg-cont mt-md-5 mt-5">
+    <div class="d-flex flex-row-reverse">
+        <div class="d-flex flex-column justify-content-center align-items-center">
+            <div class="fs-2 mb-3 text-success">
+                <i class="bi bi-bag-check"></i>
+                PAGO REALIZADO
+            </div>
+            <p class="mt-3 fs-5 text-center">El pago que usted ha hecho se ha realizado correctamente, a continuacion puede decidir si seguir comprando o ir a su area de clientes donde puede ver los pedidos que ha realizado y poder generar un PDF de la factura completa. </p>
 
+            <div>
+                <a class="btn btn-pc-economic-dark mt-3 mb-5" th:href="@{/}">Explorar articulos</a>
+                <a class="btn btn-pc-economic-dark mt-3 mb-5" th:href="@{/areaclients}">Area Clientes</a>
+            </div>
+        </div>
+    </div>
 </main>
 <div th:replace="layout/layout.html :: jquery"></div>
 <footer th:replace="layout/layout.html :: footer"></footer>
