--- a/public/PCEconomic/src/main/resources/templates/carrito.html
+++ b/public/PCEconomic/src/main/resources/templates/carrito.html
@@ -5,6 +5,14 @@
 <body class="bgbd">
     <header th:replace="layout/layout :: navbar"></header>
     <main th:if="${carrito.ids != null}" class="container bg-cont mt-md-5 mt-5">
+
+        <nav aria-label="breadcrumb mt-2">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
+                <li class="breadcrumb-item active" aria-current="page">Carrito</li>
+            </ol>
+        </nav>
+
         <h1 class="mt-3 text-center">Carrito</h1>
         <div th:if="${error != null}" class="m-1 alert alert-danger">
             <i class='bi bi-exclamation-triangle'></i>
@@ -67,6 +75,12 @@
 
     </main>
     <main class="container bg-cont mt-md-5 mt-5" th:if="${carrito.ids == null}">
+        <nav aria-label="breadcrumb mt-2">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
+                <li class="breadcrumb-item active" aria-current="page">Carrito</li>
+            </ol>
+        </nav>
         <div class="d-flex flex-column justify-content-center align-items-center">
             <h2 class="mt-4">Tu cesta está vacía</h2>
             <h3 class="mt-3">Explora multitud de artículos a buen precio desde nuestra página principal</h3>
